ExportXMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 4.9.0
    • Affects Version/s: None
    • Component/s: Replication
    • None
    • Fully Compatible
    • ALL
    • 16
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Start mongod and execute:

      db.batch_write_collation_estsize.bulkWrite([{
          updateOne: {
              filter: { str: 'FOO' },
              update: { $set: { str: 'BAR' } },
              collation: {
                  locale: 'en_US',
                  caseLevel: false,
                  caseFirst: 'off',
                  strength: 3,
                  alternate: 'non-ignorable',
                  maxVariable: 'punct',
                  normalization: false,
                  backwards: undefined
              }
          }
      }])
      

      (This code was generated by the JS fuzzer.)
      mongod crashes:

      "msg":"Invariant failure","attr":{"expr":"collation->getBackwards().is_initialized()","file":"src/mongo/db/query/collation/collator_factory_icu.cpp","line":399
      

            Assignee:
            A. Jesse Jiryu Davis
            Reporter:
            A. Jesse Jiryu Davis
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: