SERVER-54482 Fix crash if collation.backwards param is undefined/null